# openapi/api.yml
@@ -64,7 +64,7 @@ paths:
 
     get:
       tags: [Account]
-      operationId: bathysphere_graph.handlers.get_token
+      operationId: bathysphere_graph.handlers.authToken
       summary: Authorize
       description: |
 
@@ -206,7 +206,7 @@ paths:
 
     get:
       tags: [Entity]
-      operationId: bathysphere_graph.handlers.get_by_id
+      operationId: bathysphere_graph.handlers.getEntity
       summary: Get entity by ID
       description: |
         Get entity
@@ -261,28 +261,6 @@ paths:
 
 
   /{root}({rootId})/{entity}:
-
-    post:
-      tags: [Entityt]
-      operationId: bathysphere_graph.handlers.createChildEntity
-      summary: Create child entity
-      description: |
-        Create a new entity as a child of another.
-
-      parameters:
-        - $ref: "#/components/parameters/root"
-        - $ref: "#/components/parameters/rootId"
-        - $ref: "#/components/parameters/entityClass"
-        - $ref: "#/components/parameters/label"
-
-      requestBody:
-        $ref: '#/components/requestBodies/Entity'
-
-      responses:
-        '200':
-          $ref: '#/components/responses/Entity'
-        '400':
-          $ref: '#/components/responses/BadRequest'
 
     get:
       tags: [Topology]
